attribute tracking made using internal entity collection